# Moltrouter-Protocol-Daemon

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish-pypi.yml
mrpd/: __main__.py  cli.py
mrpd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mrpd/api/: app.py  routes.py
mrpd/commands/: bridge_mcp.py  bridge_openapi.py  init_provider.py  mrpify_mcp.py  mrpify_openapi.py  publish.py  route.py  run.py  serve.py  validate.py
mrpd/core/: artifacts.py  config.py  defaults.py  envelopes.py  errors.py  evidence.py  models.py  provider.py  registry.py  schema.py  scoring.py  util.py
mrpd/spec/fixtures/: README.md
mrpd/spec/fixtures/invalid/: bad_msg_type.json  missing_required_fields.json
mrpd/spec/fixtures/valid/: discover.json  error.json  offer.json
mrpd/spec/schemas/: envelope.schema.json  manifest.schema.json
mrpd/spec/schemas/payloads/: discover.schema.json  error.schema.json  evidence.schema.json  execute.schema.json  negotiate.schema.json  offer.schema.json
mrpd/spec/schemas/types/: artifact.schema.json  input.schema.json
npm/: README.md  package.json
