[project]
name = "mrpd"
version = "0.1.0"
description = "Moltrouter Protocol Daemon: serve, route, bridge, validate"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Thor"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "typer>=0.12",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
]

[project.scripts]
mrpd = "mrpd.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["mrpd*"] } }
include-package-data = true

[tool.setuptools.package-data]
mrpd = ["spec/**/*.json", "spec/**/*.md"]
